--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #61dafb;
+  border: 1px solid #61dafb;
 }
 
 .App-link {
